Add some availability check in the AutomationElementFinder to prevent crashes Add property IsAvailable to the BasicElement Fix crashes if an element goes lost until bind to the AutomationElementFinder tree Renew the AutomationElementFinder Add overloads for the BasicElementFinder.GetParent to take BasicElements and AutomationElements Change wrong argument type for the BasicElementFinder.GetParent

--- a/AutomationElementFinder/AutomationElementFinder.csproj
+++ b/AutomationElementFinder/AutomationElementFinder.csproj
@@ -65,27 +65,28 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="AutomationElementVisualization.cs" />
-    <Compile Include="TitledItem.cs" />
-    <Compile Include="TitledItemsControl.cs" />
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
+    <Compile Include="DelegateCommand.cs" />
+    <Compile Include="EnhancedTreeView.cs" />
+    <Compile Include="EnhancedTreeViewItem.cs" />
+    <Compile Include="Helper.cs" />
+    <Compile Include="MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
+    <Page Include="MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Generic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PropertiesControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
