--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -66,6 +66,7 @@
     <Compile Include="BasicElements\BasicButton.cs" />
     <Compile Include="BasicElements\BasicCheckBox.cs" />
     <Compile Include="BasicElements\BasicComboBox.cs" />
+    <Compile Include="BasicElements\BasicComboBoxItem.cs" />
     <Compile Include="BasicElements\BasicEdit.cs" />
     <Compile Include="BasicElements\BasicElement.cs" />
     <Compile Include="BasicElements\BasicElementInfo.cs" />
@@ -74,17 +75,11 @@
     <Compile Include="BasicElements\BasicListItem.cs" />
     <Compile Include="BasicElements\BasicMenu.cs" />
     <Compile Include="BasicElements\BasicMenuItem.cs" />
-    <Compile Include="BasicElements\BasicProgressBar.cs" />
     <Compile Include="BasicElements\BasicRadioButton.cs" />
-    <Compile Include="BasicElements\BasicSlider.cs" />
-    <Compile Include="BasicElements\BasicStatusBar.cs" />
-    <Compile Include="BasicElements\BasicTable.cs" />
     <Compile Include="BasicElements\BasicTabList.cs" />
     <Compile Include="BasicElements\BasicTabPage.cs" />
     <Compile Include="BasicElements\BasicText.cs" />
     <Compile Include="BasicElements\BasicToggleButton.cs" />
-    <Compile Include="BasicElements\BasicToolBar.cs" />
-    <Compile Include="BasicElements\BasicToolTip.cs" />
     <Compile Include="BasicElements\BasicTreeItem.cs" />
     <Compile Include="BasicElements\BasicTree.cs" />
     <Compile Include="CodedUIConfiguration.cs" />
