--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\DW.CodedUI.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.CodedUITestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -56,13 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application\ApplicationFactory.cs" />
-    <Compile Include="Application\ChildWindow.cs" />
-    <Compile Include="Application\OpenWindow.cs" />
-    <Compile Include="Application\OpenWindowsObserver.cs" />
-    <Compile Include="Application\WindowEventArgs.cs" />
-    <Compile Include="Application\WindowKind.cs" />
-    <Compile Include="Application\WindowsMessageBox.cs" />
-    <Compile Include="Application\WindowUnderTest.cs" />
+    <Compile Include="Application\TestableWindow.cs" />
+    <Compile Include="Application\TestableApplication.cs" />
     <Compile Include="BasicElements\BasicButton.cs" />
     <Compile Include="BasicElements\BasicCheckBox.cs" />
     <Compile Include="BasicElements\BasicComboBox.cs" />
@@ -75,6 +71,7 @@
     <Compile Include="BasicElements\BasicListItem.cs" />
     <Compile Include="BasicElements\BasicMenu.cs" />
     <Compile Include="BasicElements\BasicMenuItem.cs" />
+    <Compile Include="BasicElements\BasicMessageBox.cs" />
     <Compile Include="BasicElements\BasicRadioButton.cs" />
     <Compile Include="BasicElements\BasicTabList.cs" />
     <Compile Include="BasicElements\BasicTabPage.cs" />
@@ -89,6 +86,7 @@
     <Compile Include="Interaction\MouseEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UITree\BasicElementFinder.cs" />
+    <Compile Include="UITree\MessageBoxFinder.cs" />
     <Compile Include="UITree\WpfElementFinder.cs" />
     <Compile Include="Utilities\CodedUIBase.cs" />
     <Compile Include="Utilities\ColorDetector.cs" />
