Add Text property to the BasicComboBoxItem Add Text, IsReadonly, IsExpanded, VerticalScrollPercent, VerticalViewSize and VerticallyScrollable to the BasicComboBox Add method to the BasicComboBox to find a BasicComboBoxItem child control, even it is virtualized and it needs to be scrolled Add unsafe methods Expand, Collapse, SetValue, SetScrollPercent and ScrollVertical to the BasicComboBox Add Text property to the BasicCheckBox Add unsafe toggle method to the BasicCheckBox Add application parameter possibility to the ApplicationFactory Add HasExited to the TestableApplication

--- a/DW.CodedUI.Demo/DW.CodedUI.Demo.csproj
+++ b/DW.CodedUI.Demo/DW.CodedUI.Demo.csproj
@@ -56,7 +56,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="ControlsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FastStartWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -64,8 +68,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="ControlsWindow.xaml.cs">
+      <DependentUpon>ControlsWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="FastStartWindow.xaml.cs">
+      <DependentUpon>FastStartWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
