Add unsafe methods SetValue, Scroll, ScrollHorizontal, ScrollVertical and SetScrollPercent to the BasicEdit Add IsReadOnly, SupportedTextSelection, HorizontalScrollPercent, HorizontalViewSize, HorizontallyScrollable, VerticalScrollPercent, VerticalViewSize and VerticallyScrollable to the BasicEdit Add unsafe methods Select, Deselect and ScrollIntoView to the BasicComboBoxItem

--- a/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
@@ -72,7 +72,9 @@
     <Compile Include="Application\TestableWindowTests.cs" />
     <Compile Include="BasicElements\BasicButtonTests.cs" />
     <Compile Include="BasicElements\BasicCheckBoxTests.cs" />
+    <Compile Include="BasicElements\BasicComboBoxItemTests.cs" />
     <Compile Include="BasicElements\BasicComboBoxTests.cs" />
+    <Compile Include="BasicElements\BasicEditTests.cs" />
     <Compile Include="DispatcherUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
