Add unsafe methods Expand, Collapse, Select, Deselect and ScrollIntoView to the TreeViewItem Add Text to the TreeViewItem Add unsafe methods Scroll, ScrollHorizontal, ScrollVertical and SetScrollPercent to the BasicTreeView Add HorizontalScrollPercent, HorizontalViewSize, HorizontallyScrollable, VerticalScrollPercent, VerticalViewSize and VerticallyScrollable to the BasicTreeView Add unsafe method Toggle to the BasicToggleButton Add Text to the BasicToggleButton Add unsafe method Check to the BasicRadioButton Add unsafe methods Expand anc Collapse to the MenuItem Add Text to the MenuItem Add unsafe methods AddToSelection, RemoveFromSelection, Select and ScrollIntoView to the BasicListItem Add Text to the BasicListItem Add unsafe methods Scroll, ScrollHorizontal, ScrollVertical and SetScrollPercent to the BasicList Add GetColumnHeaders to the BasicList Add Getitem to get a cell item to the BasicList Add HorizontalScrollPercent, HorizontalViewSize, HorizontallyScrollable, VerticalScrollPercent, VerticalViewSize, VerticallyScrollable, ColumnCount and RowCount to the BasicList Add method FindChildByCondition to BsicList Add unsage methods Expand and Collapse to the BasicExpander Add IsExpanded to the BasicExpander Mark BasicTreeItem as obsolete, it is replaced by the BasicTreeViewItem Mark BasicTree as obsolete, it is replaced by the BasicTreeView Mark BasicTabPage as obsolete, it is replaced by the BasicTabItem Mark BasicTabList as obsolete, it is replaced by the BasicTabView

--- a/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
@@ -75,6 +75,18 @@
     <Compile Include="BasicElements\BasicComboBoxItemTests.cs" />
     <Compile Include="BasicElements\BasicComboBoxTests.cs" />
     <Compile Include="BasicElements\BasicEditTests.cs" />
+    <Compile Include="BasicElements\BasicExpanderTests.cs" />
+    <Compile Include="BasicElements\BasicListItemTests.cs" />
+    <Compile Include="BasicElements\BasicListTests.cs" />
+    <Compile Include="BasicElements\BasicMenuItemTests.cs" />
+    <Compile Include="BasicElements\BasicMenuTests.cs" />
+    <Compile Include="BasicElements\BasicRadioButtonTests.cs" />
+    <Compile Include="BasicElements\BasicTabControlTests.cs" />
+    <Compile Include="BasicElements\BasicTabItemTests.cs" />
+    <Compile Include="BasicElements\BasicTextTests.cs" />
+    <Compile Include="BasicElements\BasicToggleButtonTests.cs" />
+    <Compile Include="BasicElements\BasicTreeViewItemTests.cs" />
+    <Compile Include="BasicElements\BasicTreeViewTests.cs" />
     <Compile Include="DispatcherUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
