--- a/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
@@ -88,7 +88,11 @@
     <Compile Include="BasicElements\BasicTreeViewItemTests.cs" />
     <Compile Include="BasicElements\BasicTreeViewTests.cs" />
     <Compile Include="DispatcherUtility.cs" />
+    <Compile Include="Interaction\KeyboardExTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UITree\MessageBoxFinderTests.cs" />
+    <Compile Include="Utilities\CodedUIBaseTests.cs" />
+    <Compile Include="Waiting\DynamicSleepTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DW.CodedUI\DW.CodedUI.csproj">
