Add method to ColorDetector to get the color from a specific position in a BasicElement Mark overload method in the ColorDetector which takes a WpfControl as Obsolete because the library is focus on BasicElements Add display of the SupportedPatterns in the AutomationElementFinder

--- a/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UITree\MessageBoxFinderTests.cs" />
     <Compile Include="Utilities\CodedUIBaseTests.cs" />
+    <Compile Include="Utilities\ColorDetectorTests.cs" />
     <Compile Include="Waiting\DynamicSleepTests.cs" />
   </ItemGroup>
   <ItemGroup>
