Add new method to the ApplicationFactory to launch an assembly and get the BasicWindow from Add additional overload with the BasicWindow to the Shutdown object and mark the WpfWindow and TestableApplication overloads as obsolete Mark TestableApplication as obsolete Add WindowFinder to search for windows, it is replacing the TestableWindow which is obsolete now Obsolete WindowFocus overload with WpfWindow and add method with BasicWindow Add BasicWindow with the main functionality In the AutomationElementFinder the left tree is separated between under mouse controls and siblings Remove obsolete overload in ColorDetector Remove obsolete objects

--- a/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests.csproj
@@ -68,8 +68,6 @@
   <ItemGroup>
     <Compile Include="ApplicationInfo.cs" />
     <Compile Include="Application\ApplicationFactoryTests.cs" />
-    <Compile Include="Application\TestableApplicationTests.cs" />
-    <Compile Include="Application\TestableWindowTests.cs" />
     <Compile Include="BasicElements\BasicButtonTests.cs" />
     <Compile Include="BasicElements\BasicCheckBoxTests.cs" />
     <Compile Include="BasicElements\BasicComboBoxItemTests.cs" />
@@ -87,6 +85,7 @@
     <Compile Include="BasicElements\BasicToggleButtonTests.cs" />
     <Compile Include="BasicElements\BasicTreeViewItemTests.cs" />
     <Compile Include="BasicElements\BasicTreeViewTests.cs" />
+    <Compile Include="BasicElements\BasicWindowTests.cs" />
     <Compile Include="DispatcherUtility.cs" />
     <Compile Include="Interaction\KeyboardExTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
