--- a/DW.CodedUI/DW.CodedUI.csproj
+++ b/DW.CodedUI/DW.CodedUI.csproj
@@ -57,9 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application\ApplicationFactory.cs" />
-    <Compile Include="Application\TestableWindow.cs" />
     <Compile Include="Application\TestableApplication.cs" />
+    <Compile Include="Application\TestableWindow.cs" />
     <Compile Include="Application\TitleSearchCondition.cs" />
+    <Compile Include="Application\WindowSearchCondition.cs" />
+    <Compile Include="Application\WindowState.cs" />
     <Compile Include="BasicElements\BasicButton.cs" />
     <Compile Include="BasicElements\BasicCheckBox.cs" />
     <Compile Include="BasicElements\BasicComboBox.cs" />
@@ -75,15 +77,12 @@
     <Compile Include="BasicElements\BasicMessageBox.cs" />
     <Compile Include="BasicElements\BasicRadioButton.cs" />
     <Compile Include="BasicElements\BasicTabControl.cs" />
-    <Compile Include="BasicElements\BasicTabList.cs" />
     <Compile Include="BasicElements\BasicTabItem.cs" />
-    <Compile Include="BasicElements\BasicTabPage.cs" />
     <Compile Include="BasicElements\BasicText.cs" />
     <Compile Include="BasicElements\BasicToggleButton.cs" />
-    <Compile Include="BasicElements\BasicTree.cs" />
-    <Compile Include="BasicElements\BasicTreeItem.cs" />
     <Compile Include="BasicElements\BasicTreeViewItem.cs" />
     <Compile Include="BasicElements\BasicTreeView.cs" />
+    <Compile Include="BasicElements\BasicWindow.cs" />
     <Compile Include="CodedUIConfiguration.cs" />
     <Compile Include="Interaction\At.cs" />
     <Compile Include="Interaction\KeyboardCommands.cs" />
@@ -93,7 +92,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UITree\BasicElementFinder.cs" />
     <Compile Include="UITree\MessageBoxFinder.cs" />
-    <Compile Include="UITree\WpfElementFinder.cs" />
+    <Compile Include="UITree\WindowFinder.cs" />
     <Compile Include="Utilities\CodedUIBase.cs" />
     <Compile Include="Utilities\ColorDetector.cs" />
     <Compile Include="Utilities\Highlighter.cs">
