--- a/DW.CodedUI.Tests/DW.CodedUI.Tests_VS2010.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests_VS2010.csproj
@@ -95,9 +95,9 @@
     <Compile Include="Waiting\DynamicSleepTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DW.CodedUI\DW.CodedUI.csproj">
+    <ProjectReference Include="..\DW.CodedUI\DW.CodedUI_VS2010.csproj">
       <Project>{FC72ED40-C91D-4852-8DCE-7C487AC1AEC1}</Project>
-      <Name>DW.CodedUI</Name>
+      <Name>DW.CodedUI_VS2010</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
