--- a/DW.CodedUI/DW.CodedUI_VS2012.csproj
+++ b/DW.CodedUI/DW.CodedUI_VS2012.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Utilities\MessageBoxInfo.cs" />
     <Compile Include="Utilities\Shutdown.cs" />
     <Compile Include="Utilities\ShutdownConfiguration.cs" />
+    <Compile Include="Utilities\WinApi.cs" />
     <Compile Include="Utilities\WindowFocus.cs" />
     <Compile Include="Waiting\DynamicSleep.cs" />
     <Compile Include="Waiting\ExecutionSpeed.cs" />
