--- a/DW.CodedUI.Tests/DW.CodedUI.Tests_VS2012.csproj
+++ b/DW.CodedUI.Tests/DW.CodedUI.Tests_VS2012.csproj
@@ -79,12 +79,17 @@
     <Compile Include="BasicElements\BasicWindowTests.cs" />
     <Compile Include="DispatcherUtility.cs" />
     <Compile Include="Interaction\KeyboardExTests.cs" />
+    <Compile Include="Interaction\MessageBoxHandlerTests.cs" />
     <Compile Include="Interaction\MouseExTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UITree\MessageBoxFinderTests.cs" />
+    <Compile Include="UITree\BasicElementFinderTests.cs" />
+    <Compile Include="UITree\WindowFinderTests.cs" />
     <Compile Include="Utilities\CodedUIBaseTests.cs" />
     <Compile Include="Utilities\ColorDetectorTests.cs" />
     <Compile Include="Utilities\HighlighterTests.cs" />
+    <Compile Include="Utilities\ShutdownTests.cs" />
+    <Compile Include="Utilities\WindowFocusTests.cs" />
     <Compile Include="Waiting\DynamicSleepTests.cs" />
   </ItemGroup>
   <ItemGroup>
